Microservice_architecture_and_containerization/HW5/service_postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres2
  ports:
  - protocol: TCP
    port: 5432
  type: ClusterIP
