Microservice_architecture_and_containerization/HW5/service_redmine.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
spec:
  selector:
    app: redmine
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
