Microservice_architecture_and_containerization/HW5/ingress_redmine.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redmine-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: redmine-service
          servicePort: 80
